cambie unos estilos

--- a/scss/archivo.scss
+++ b/scss/archivo.scss
@@ -190,7 +190,7 @@ table {
 }
 .servicios__servicios {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   flex-direction: row;
   margin: 2rem;
   color: rgb(82, 90, 105);
