--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,7 @@ table {
 
 .servicios__servicios {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   flex-direction: row;
   margin: 2rem;
   color: #525a69;
