mas cambios en scss

--- a/scss/archivo.scss
+++ b/scss/archivo.scss
@@ -39,7 +39,7 @@ body {
   color: rgb(107, 110, 110);
   text-align: left;
   margin: 0;
-  padding: 1;
+  padding: 1rem;
   text-decoration: none;
   font-style: normal;
   font-size: 20px;
@@ -52,7 +52,7 @@ body {
   color: rgb(107, 110, 110);
   text-align: left;
   margin: 0;
-  padding: 0;
+  padding: 1rem;
   text-decoration: none;
   font-style: normal;
   font-size: 20px;
