--- a/scss/archivo.css
+++ b/scss/archivo.css
@@ -36,7 +36,7 @@ body {
   color: #6b6e6e;
   text-align: left;
   margin: 0;
-  padding: 1;
+  padding: 1rem;
   text-decoration: none;
   font-style: normal;
   font-size: 20px;
@@ -50,7 +50,7 @@ body {
   color: #6b6e6e;
   text-align: left;
   margin: 0;
-  padding: 0;
+  padding: 1rem;
   text-decoration: none;
   font-style: normal;
   font-size: 20px;
