--- a/scss/archivo.css
+++ b/scss/archivo.css
@@ -8,7 +8,7 @@ body {
   color: #6b6e6e;
   text-align: left;
   margin: 0;
-  padding: 0;
+  padding: 1rem;
   text-decoration: none;
   font-style: normal;
   font-size: 20px;
@@ -22,7 +22,7 @@ body {
   color: #6b6e6e;
   text-align: left;
   margin: 0;
-  padding: 0;
+  padding: 1rem;
   text-decoration: none;
   font-style: normal;
   font-size: 20px;
@@ -62,6 +62,10 @@ body {
 
 p {
   color: black;
+}
+
+p {
+  font-size: 16px;
 }
 
 .carousel-control-prev-icon {
