--- a/scss/archivo.scss
+++ b/scss/archivo.scss
@@ -13,7 +13,7 @@ body {
   color: rgb(107, 110, 110);
   text-align: left;
   margin: 0;
-  padding: 0;
+  padding: 1rem;
   text-decoration: none;
   font-style: normal;
   font-size: 20px;
@@ -26,7 +26,7 @@ body {
   color: rgb(107, 110, 110);
   text-align: left;
   margin: 0;
-  padding: 0;
+  padding: 1rem;
   text-decoration: none;
   font-style: normal;
   font-size: 20px;
@@ -67,6 +67,9 @@ p{
 }@else{
   color:red;
 }
+}
+p{
+  font-size: 16px;
 }
 .carousel-control-prev-icon{
   left: 0;
