--- a/scss/archivo.scss
+++ b/scss/archivo.scss
@@ -82,22 +82,21 @@ p{
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='black' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
   }
 }
+header {
+  position: relative;
+}
 .nav__banner {
-  background-image: url("../Img/lOGO FEDE.png");
-  background-repeat: no-repeat;
-  background-size: 600px;
-  background-position: top center;
-  line-height: 50px;
+  display: flex;
+  justify-content: center;
 }
 .inicio {
   display: flex;
   justify-content: space-between;
 }
 .nav__iconos {
-  font-size: 35px;
-  margin-bottom: 80px;
-  size: 15px;
-  text-align: right;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
 }
 .navbar{
   background-color: rgba(230, 240, 255,0.5);
