--- a/scss/archivo.scss
+++ b/scss/archivo.scss
@@ -313,6 +313,16 @@ img{
     top: 10px;
     left: 10px;
 }
+table {
+  margin-top: 3rem;
+  text-align: center;
+}
+table i.fa-check-circle {
+  color: #28a745;
+}
+table i.fa-times-circle {
+  color: #dc3545;
+}
 @media only screen and (max-width:768px){
   .textoGrande{
     flex-direction: column;
