--- a/scss/archivo.css
+++ b/scss/archivo.css
@@ -162,6 +162,12 @@ ul.barra li a {
   margin-left: 20px;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 #grilla {
